[gd_scene load_steps=16 format=3 uid="uid://dxs3t445ni10k"]

[ext_resource type="Script" uid="uid://p6m4p2kaghov" path="res://stages/world_9/Additives/after_9-3_cutscene.gd" id="1_iown8"]
[ext_resource type="Texture2D" uid="uid://boehij35imfw" path="res://gfx/worldfinal/10-3bg.png" id="2_4huv1"]
[ext_resource type="Texture2D" uid="uid://ctlks8ipvn5el" path="res://gfx/worldfinal/cutscene/office.png" id="3_c2hdq"]
[ext_resource type="PackedScene" uid="uid://1do11cr84k7y" path="res://engine/objects/players/player.tscn" id="4_k3hjt"]
[ext_resource type="Script" uid="uid://cugmax5psc2oo" path="res://engine/objects/players/player_camera_2d.gd" id="5_iown8"]
[ext_resource type="PackedScene" uid="uid://yqftjpfskche" path="res://engine/components/cam_area/cam_area.tscn" id="6_mj0c1"]
[ext_resource type="FontVariation" uid="uid://u83p423iwekg" path="res://addons/localization/special_fonts/misterearlbt_variation.tres" id="7_7p7cd"]
[ext_resource type="Script" uid="uid://c0xlh6o06spwa" path="res://engine/objects/signs/sign_help_key_formatter.gd" id="8_owjtm"]
[ext_resource type="PackedScene" uid="uid://drhbi6o26ua1b" path="res://stages/world_9/Additives/cutscene/remi_sprite.tscn" id="9_owjtm"]
[ext_resource type="Texture2D" uid="uid://dp2tf6qot5iya" path="res://gfx/world9/cutscene/chair.png" id="10_40pmo"]
[ext_resource type="Texture2D" uid="uid://d0jadw6obmn4b" path="res://gfx/world9/cutscene/chair_2.png" id="11_c2hdq"]
[ext_resource type="Texture2D" uid="uid://1corv70pqkg" path="res://gfx/world9/cutscene/umbrella.png" id="12_c2hdq"]

[sub_resource type="Gradient" id="Gradient_gm3f5"]
colors = PackedColorArray(0.227451, 0.345098, 0.470588, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6u6lh"]
gradient = SubResource("Gradient_gm3f5")
fill_to = Vector2(0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3hjt"]
size = Vector2(32, 32)

[node name="After9-3Cutscene" type="Node2D"]
script = ExtResource("1_iown8")
goto_path = "uid://b270euhmgq4m3"
metadata/_custom_type_script = "uid://bwpe24nufpj37"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
z_index = -100
position = Vector2(320, 240)
scale = Vector2(10, 7.5)
texture = SubResource("GradientTexture2D_6u6lh")
metadata/_edit_lock_ = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(0.489622, 0.489622, 0.489622, 1)

[node name="TextureRect2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_left = -280.0
offset_top = -440.0
offset_right = 16752.0
offset_bottom = 584.0
texture = ExtResource("2_4huv1")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(0.489622, 0.489622, 0.489622, 1)
z_index = -2
motion_scale = Vector2(0.5, 0.5)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
self_modulate = Color(1, 1, 1, 0.592157)
offset_left = -400.0
offset_top = -24.0
offset_right = 16632.0
offset_bottom = 1000.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4huv1")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="CastleBottom" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(320, 488)
texture = ExtResource("3_c2hdq")
region_enabled = true
region_rect = Rect2(0, 256, 544, 240)

[node name="CastleTop" type="Sprite2D" parent="."]
self_modulate = Color(0.537011, 0.537011, 0.537011, 1)
z_index = -3
position = Vector2(320, 240)
texture = ExtResource("3_c2hdq")
region_enabled = true
region_rect = Rect2(0, 0, 544, 256)

[node name="Player" parent="." instance=ExtResource("4_k3hjt")]
visible = false
position = Vector2(16, 352)
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
position = Vector2(16, 384)
collision_layer = 112
collision_mask = 112
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_k3hjt")
metadata/_edit_lock_ = true

[node name="PlayerCamera2D" type="Camera2D" parent="."]
position = Vector2(320, 240)
editor_draw_screen = false
script = ExtResource("5_iown8")
metadata/_edit_lock_ = true

[node name="CameraArea" parent="." instance=ExtResource("6_mj0c1")]
z_index = 100
offset_right = 640.0
offset_bottom = 480.0
metadata/_edit_lock_ = true

[node name="SkipLabel" type="Label" parent="."]
z_index = 100
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = 444.0
offset_right = 631.0
offset_bottom = 477.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.454902, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_7p7cd")
theme_override_font_sizes/font_size = 34
text = "Press the %s to skip."
horizontal_alignment = 2
script = ExtResource("8_owjtm")
action = "ui_accept"
metadata/_edit_lock_ = true

[node name="NewspaperLanding" type="Marker2D" parent="."]
position = Vector2(280, 360)

[node name="RemiSprite" parent="." instance=ExtResource("9_owjtm")]
modulate = Color(0, 0, 0, 1)
z_index = 3
position = Vector2(328, 320)

[node name="NewsInterval" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="Chair" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(473, 355)
scale = Vector2(1.3, 1.3)
texture = ExtResource("10_40pmo")

[node name="Chair2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(395, 343.5)
scale = Vector2(1.3, 1.3)
texture = ExtResource("11_c2hdq")

[node name="Umbrella" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(436, 285)
scale = Vector2(1.3, 1.3)
texture = ExtResource("12_c2hdq")
